--- a/ws-server/.env
+++ b/ws-server/.env
@@ -1,5 +1,5 @@
-DB_PASSWORD=MysecretPassword
-DB_NAME=joancema
+DB_PASSWORD=admin
+DB_NAME=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
